modified:   EduServer_IOCP.vcxproj 	modified:   EduServer_IOCP.vcxproj.filters 	new file:   FastSpinlock.cpp 	new file:   FastSpinlock.h 	new file:   ObjectPool.h 	modified:   SessionManager.cpp 	modified:   SessionManager.h 	modified:   stdafx.h

--- a/EduServer_IOCP/EduServer_IOCP/EduServer_IOCP.vcxproj.filters
+++ b/EduServer_IOCP/EduServer_IOCP/EduServer_IOCP.vcxproj.filters
@@ -35,6 +35,12 @@
     <ClInclude Include="IocpManager.h">
       <Filter>Main</Filter>
     </ClInclude>
+    <ClInclude Include="FastSpinlock.h">
+      <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectPool.h">
+      <Filter>Utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -54,6 +60,9 @@
     </ClCompile>
     <ClCompile Include="IocpManager.cpp">
       <Filter>Main</Filter>
+    </ClCompile>
+    <ClCompile Include="FastSpinlock.cpp">
+      <Filter>Utils</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
