--- a/EduServer_RIO/EduServer_RIO/EduServer_RIO.vcxproj
+++ b/EduServer_RIO/EduServer_RIO/EduServer_RIO.vcxproj
@@ -150,6 +150,8 @@
     <ClInclude Include="Exception.h" />
     <ClInclude Include="FastSpinlock.h" />
     <ClInclude Include="ObjectPool.h" />
+    <ClInclude Include="RioBufferManager.h" />
+    <ClInclude Include="RioContext.h" />
     <ClInclude Include="RIOManager.h" />
     <ClInclude Include="SessionManager.h" />
     <ClInclude Include="stdafx.h" />
@@ -161,6 +163,8 @@
     <ClCompile Include="EduServer_RIO.cpp" />
     <ClCompile Include="Exception.cpp" />
     <ClCompile Include="FastSpinlock.cpp" />
+    <ClCompile Include="RioBufferManager.cpp" />
+    <ClCompile Include="RioContext.cpp" />
     <ClCompile Include="RIOManager.cpp" />
     <ClCompile Include="SessionManager.cpp" />
     <ClCompile Include="stdafx.cpp">
